@@ -31,6 +31,8 @@ extern "C" {
 					   included tables; arg points
 					   to the domain string */
 #define POPT_ARG_VAL		7	/* arg should take value val */
+#define	POPT_ARG_FLOAT		8	/* arg should be converted to float */
+#define	POPT_ARG_DOUBLE		9	/* arg should be converted to double */
 
 #define POPT_ARG_MASK		0x0000FFFF
 #define POPT_ARGFLAG_ONEDASH	0x80000000  /* allow -longoption */
