@@ -107,6 +107,7 @@
 	- fix: preserve cpio errno when using Fclose with libio.
 	- fix: initialize sigs everywhere in python header object.
 	- translate rpm.8 man page (Peter Ivanyi <ivanyi@internet.sk>).
+	- popt: support for float/double args.
 
 3.0.4 -> 3.0.5
 	- configure.in fiddles for BSD systems (Patrick Schoo).
